@@ -41,12 +41,30 @@ describe UsersController do
   end
 
   describe 'GET #calendar' do
+
     it 'renders calendar' do
       sign_in(user)
 
       get :calendar, username: user.username
 
       expect(response).to render_template('calendar')
+    end
+
+    context 'forked project' do
+      let!(:project) { create(:project) }
+      let!(:forked_project) { Projects::ForkService.new(project, user).execute }
+
+      before do
+        sign_in(user)
+        project.team << [user, :developer]
+        EventCreateService.new.push(project, user, [])
+        EventCreateService.new.push(forked_project, user, [])
+      end
+
+      it 'includes forked projects' do
+        get :calendar, username: user.username
+        expect(assigns(:contributions_calendar).projects.count).to eq(2)
+      end
     end
   end
 
